fix(frontend): Finish aligning saved searches
This brings the saved searches into line with designs

IssueID #179

--- a/client/src/satellites/saved-search-list.module.css
+++ b/client/src/satellites/saved-search-list.module.css
@@ -1,3 +1,7 @@
+.list {
+  margin-top: 1rem;
+}
+
 .savedSearchDetail p {
   font-family: 'Open Sans';
   display: flex;
@@ -5,7 +9,13 @@
 }
 
 .savedSearchDetail h5 {
+  font-size: 14px;
+  font-weight: normal;
+  font-stretch: normal;
+  font-style: normal;
+  line-height: 1.57;
   border-bottom: 1px solid #4d4c4c;
+  margin-bottom: 0.375rem;
 }
 
 .savedSearchDetail .description {
@@ -13,6 +23,7 @@
   grid-template-columns: 1fr 2fr;
   column-gap: 0.375rem;
   row-gap: 0.375rem;
+  margin-bottom: 1rem;
 }
 
 .savedSearchDetail .descriptionItem {
